--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.SahayakAPP"
+        android:theme="@style/Theme.SahayakApp"
         tools:targetApi="31">
 
         <!-- Splash Screen (Launch Activity) -->
